# nanogpt-experiment-base

./: .gitignore  README.md  pyproject.toml  train.py
data/: fineweb.py  random.py
src/: experiment.py  model.py
src/config/: __init__.py  job_config.py  manager.py
